--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header {
     top: 60px;
     height: 0px;
     width: 300px;
-    background: rgba(249, 206, 154, 0.112);
+    background: rgba(249, 206, 154, 0.525);
     border-radius: 10px;
     overflow: hidden;
     transition: height 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -97,6 +97,30 @@ header {
 .dropdown .btn {
     width: 100%;
     text-align: center;
+}
+
+.hero {
+    background-image: url(/image/hero.jpg);
+    background-position: center;
+    background-size: cover;
+    height: calc(100vh - 60px);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.hero h1 {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+    font-family: 'Yellowtail', cursive;
+    color: rgb(102, 65, 17);
+}
+
+.hero p {
+    color: #1d1d1c;
+    font-size: 1.2rem;
 }
 
 @media (max-width: 768px) {
